--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Portuguese literature -- 19th century'
+- GITenberg
 title: "A Morgadinha dos Cannaviaes\r\n(Chronica da aldeia)"
 url: http://www.gutenberg.org/ebooks/29120
